Required lease term & credit score Separated footer template Copy fixes

--- a/angular/src/app/partials/terms.tpl.html
+++ b/angular/src/app/partials/terms.tpl.html
@@ -1,7 +1,7 @@
 <div class="container">
     <div class="block-content block-content-small-padding">
         <div class="block-content-inner">
-            <h2 class="center">Terms &amp; Conditions</h2>
+            <h2 class="center">Terms of Use</h2>
             <p>
                 WEBSITE PRIVACY POLICY EFFECTIVE DATE: MAY 2014
                 <br><br>1. INTRODUCTION. Rented (“us,” “we,” or “Company”) is committed to respecting the privacy rights of its customers, visitors, and other users of the Company Website or Mobile Application (“the Site”). We created this Website Privacy Policy (“Privacy Policy”) to give you confidence as you visit and use the Site, and to demonstrate our commitment to fair information practices and the protection of privacy. This Privacy Policy is only applicable to the Site, and not to any other websites that you may be able to access from the Site, each of which may have data collection, storage, and use practices and policies that differ materially from this Privacy Policy.
