Changed auction from Live to Closed.

--- a/angular/src/app/partials/home.tpl.html
+++ b/angular/src/app/partials/home.tpl.html
@@ -70,7 +70,7 @@
                         {{property.state}}</a>
                     </h4>
 
-                    <div class="property-box-label">Live</div>
+                    <div class="property-box-label">Closed</div>
                     <!-- /.property-box-label -->
                     <div class="property-box-picture">
                         <div class="property-box-price">Starting Offer ${{property.rent}}</div>
