--- a/angular/src/app/partials/home.tpl.html
+++ b/angular/src/app/partials/home.tpl.html
@@ -5,13 +5,13 @@
                 <div class="homepage-feature col-xs-12">
                     <div class="feature-icon col-xs-2 col-sm-2">
                         <div class="feature-icon-inner">
-                            <i class="fa fa-calendar"></i>
+                            <i class="fa fa-eye"></i>
                         </div>
                         <!-- /.feature-icon-inner -->
                     </div>
                     <!-- /.feature-icon -->
                     <div class="col-xs-10 col-sm-10">
-                        <h2 class="homepage-feature-title">Schedule a Visit</h2>
+                        <h2 class="homepage-feature-title">View the Property</h2>
 
                         <div class="homepage-feature-body">
                             Visit properties during open house or schedule a private tour.
@@ -69,10 +69,10 @@
     <div class="homepage-block-content fullwidth clearfix">
         <div class="block-content-inner row">
             <div class="col-xs-12 col-md-7">
-                <h2>Schedule a Visit</h2>
+                <h2>View the Property</h2>
                 <ul class="homepage-feature-list list-unstyled">
                     <li>
-                        <i class="fa fa-eye"></i> See the property that could be your future
+                        <i class="fa fa-eye"></i> See the property that could be yours future
                         home.
                     </li>
                     <li>
