--- a/angular/src/app/user/partials/registermodal.tpl.html
+++ b/angular/src/app/user/partials/registermodal.tpl.html
@@ -3,9 +3,9 @@
         <h3 class="modal-title">{{title}}</h3>
     </div>
     <div class="modal-body">
-        <ng-include src="'user/partials/loginform.tpl.html'"></ng-include>
+        <ng-include src="'user/partials/registerform.tpl.html'"></ng-include>
         <p class="center">
-            Don't have an account? <button ng-click="openRegisterModal()">Register Here</button>
+            Already have an account? <button ng-click="openLoginModal()">Login Here</button>
         </p>
     </div>
 </div>
