--- a/angular/src/app/nav/partials/banner.tpl.html
+++ b/angular/src/app/nav/partials/banner.tpl.html
@@ -1,7 +1,1 @@
-<div class="row bg-{{banner.contentClass}}" style="padding-top: 10px; padding-bottom: 10px;">
-    <div class="container">
-        <div class="col-sm-12">
-            <div align="center" ng-bind-html="banner.content"></div>
-        </div>
-    </div>
-</div>
+<div align="center" ng-show="banner" class="alert-{{banner.contentClass}}" ng-bind-html="banner.content"></div>
