--- a/angular/src/app/user/partials/loginform.tpl.html
+++ b/angular/src/app/user/partials/loginform.tpl.html
@@ -1,14 +1,5 @@
 <div ng-show="err" class="alert alert-danger">{{err}}</div>
 <div class="box">
-    <div>
-        <center>
-        <i class="fa fa-facebook-square"></i>
-        <a href="#" ng-click="fblogin()">Login using Facebook</a>
-        </center>
-    </div>
-    <hr/>
-    <center>OR</center>
-    <hr/>
     <form method="post" ng-submit="login()">
         <div class="form-group">
             <label>Email Address</label>
@@ -20,23 +11,13 @@
             <input type="password" class="form-control" placeholder="Password" ng-model="data.pass" required>
         </div>
         <!-- /.form-group -->
-        <div class="form-group" ng-cloak ng-show="createMode">
-            <label>Confirm Password</label>
-            <input type="password" class="form-control" placeholder="Confirm Password" ng-model="data.confirm"/>
-        </div>
         <div class="form-group">
             <input type="submit" value="Login" ng-hide="createMode" class="btn btn-primary btn-inversed btn-block">
-            <button ng-click="createMode = true" ng-hide="createMode" class="btn btn-lg btn-primary btn-block">
-                Register
-            </button>
-            <button ng-cloak ng-show="createMode" ng-click="createAccount()"
-                    class="btn btn-lg btn-primary btn-inversed btn-block">Create Account
-            </button>
             <button ng-cloak ng-show="createMode" ng-click="createMode = false"
                     class="btn btn-lg btn-primary btn-block">Cancel
             </button>
         </div>
         <!-- /.form-group -->
     </form>
-    <p>By registering and/or logging in to the system you agree to the <a href="#/terms">Terms of Use</a> and <a href="#/privacy-policy">Privacy Policy</a>.</p>
+    <p class="center">By logging in to the system you agree to the <a href="#/terms">Terms of Use</a> and <a href="#/privacy-policy">Privacy Policy</a>.</p>
 </div>
