--- a/angular/src/app/property/partials/snippet.tpl.html
+++ b/angular/src/app/property/partials/snippet.tpl.html
@@ -1,12 +1,11 @@
-<div class="property-box homepage-property-box">
+<div class="property-box homepage-property-box" ng-cloak>
     <div class="property-box-inner">
         <h4 class="property-box-title homepage-property-box-title"><a href="#/property/{{id}}">{{property.address}}</a>
         </h4>
         <h4 class="property-box-subtitle homepage-property-box-subtitle"><a href="#/property/{{id}}">{{property.city}}
             {{property.state}}</a>
         </h4>
-
-        <div class="property-box-label">Live</div>
+        <div class="property-box-label">{{property.status || getStatus(property)}}</div>
         <!-- /.property-box-label -->
         <div class="property-box-picture">
             <div class="property-box-price">Range ${{property.rent}} - ${{property.rentItNow}}</div>
