Style changes and featured property change

--- a/angular/src/app/nav/partials/header.tpl.html
+++ b/angular/src/app/nav/partials/header.tpl.html
@@ -1,15 +1,18 @@
-<div id="header" style="border-bottom: 1px solid #ccc">
+<div id="header" class="header-clssic" style="border-bottom: 1px solid #ccc">
     <div id="header-inner">
-        <ng-include src="'nav/partials/topbar.tpl.html'"></ng-include>
         <!-- /.header-bar -->
         <div>
             <div class="container">
                 <div class="header-identity" style="padding-top: 15px;">
                     <a href="index.html" class="header-identity-target">
-                        <span class="header-icon"><i class="fa fa-home"></i></span>
-                        <span class="header-title">RENTED</span><!-- /.header-title -->
-                        <span class="header-slogan">Name your Rent&trade;</span><!-- /.header-slogan -->
-                    </a><!-- /.header-identity-target-->
+                        <span class="header-icon"><i class="fa fa-home"></i>
+                        </span>
+                        <span class="header-title">RENTED</span>
+                        <!-- /.header-title -->
+                        <span class="header-slogan">Name your Rent&trade;</span>
+                        <!-- /.header-slogan -->
+                    </a>
+                    <!-- /.header-identity-target-->
                 </div>
                 <ng-include src="'nav/partials/nav.tpl.html'"></ng-include>
             </div>
