--- a/angular/src/app/nav/partials/topbar.tpl.html
+++ b/angular/src/app/nav/partials/topbar.tpl.html
@@ -1,7 +1,7 @@
 <div class="header-bar">
     <div class="container">
         <div class="header-infobox">
-            <strong>E-mail:</strong> <a href="#">info@rented.io</a>
+            <strong>E-mail:</strong> <a href="mailto:info@rented.co">info@rented.co</a>
         </div>
         <!-- /.header-infobox-->
         <div class="header-infobox">
