--- a/angular/src/app/partials/footer.tpl.html
+++ b/angular/src/app/partials/footer.tpl.html
@@ -2,10 +2,23 @@
     <div id="footer-inner">
         <div class="footer-bottom">
             <div class="container">
-                <p class="center no-margin">
+            	<div style="position:absolute;left:-9999px">
+            		<a href="http://startups.livechatinc.com" target="_blank"> <img src="http://cdn.livechatinc.com/startups/livechat-for-startups@2x.png" width="96" height="72" alt="LiveChat for Startups"></a>
+            	</div>
+                <div class="pull-left">
                     &copy; 2014 Rented Inc., All rights reserved | <a href="#/terms">Terms of Use</a> | <a href="#/privacy-policy">Privacy Policy</a>
-                </p>
+                </div>
             </div><!-- /.container -->
         </div><!-- /.footer-bottom -->
     </div><!-- /#footer-inner -->
 </div><!-- /#footer -->
+<script type="text/javascript">
+var __lc = {};
+__lc.license = 4499161;
+
+(function() {
+	var lc = document.createElement('script'); lc.type = 'text/javascript'; lc.async = true;
+	lc.src = ('https:' == document.location.protocol ? 'https://' : 'http://') + 'cdn.livechatinc.com/tracking.js';
+	var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(lc, s);
+})();
+</script>
