--- a/angular/src/assets/css/realocation.css
+++ b/angular/src/assets/css/realocation.css
@@ -5421,7 +5421,7 @@ label {
 
 .header-classic {
     position: relative;
-    z-index: 99999
+    z-index: 9999;
 }
 
 .header-classic .header-top {
