--- a/angular/src/less/main.less
+++ b/angular/src/less/main.less
@@ -8,7 +8,6 @@
 .homepage-feature-title{
   font-weight: bold;
   vertical-align: middle;
-  color: #39b54a;
   margin: 0;
   vertical-align: middle;
   font-size: 24px
@@ -32,6 +31,12 @@
 
 .homepage-property-box{
   padding-top: 10px;
+    color: #39b54a;
+
+}
+
+.homepage-property-box a{  
+    color: #39b54a;
 }
 
 h4.homepage-property-box-subtitle, h4.homepage-property-box-subtitle a {
@@ -48,4 +53,10 @@ h4.homepage-property-box-subtitle, h4.homepage-property-box-subtitle a {
 
 .header-title{
   text-transform: none;
+}
+
+.background-brick{
+  background-image: url("img/patterns/brickwall.png");
+  background-repeat: repeat;
+  background-position: center center;
 }
