--- a/angular/src/app/nav/partials/nav.tpl.html
+++ b/angular/src/app/nav/partials/nav.tpl.html
@@ -7,10 +7,17 @@
 <div class="pull-right collapse navbar-collapse" id="top-navbar-collapse">
     <ul class="nav navbar-nav nav-pills">
         <li class="menuparent">
-            <a ng-class="isActive('/home')" href="#/home">Home</a>
-        </li>
-        <li class="menuparent">
             <a ng-class="isActive('/properties')" href="#/properties">Properties</a>
+        </li>
+        <li ng-show-auth="['logout','error']"><a ng-class="isActive('/login')" href="#/login">Login</a>
+        </li>
+        <li ng-show-auth="['logout','error']"><a ng-class="isActive('/register')" href="#/register">Register</a>
+        </li>
+        <li class="menuparent" ng-show-auth="'login'"><a ng-class="isActive('/account')" href="#/account">My Account</a>
+        </li>
+        <li><a href="mailto:help@rented.co">Help</a>
+        </li>
+        <li ng-show-auth="'login'"><a href="#/logout" onclick="return confirm('Are you sure you want to logout?')">Logout</a>
         </li>
     </ul>
 </div>
