--- a/angular/src/app/partials/home.tpl.html
+++ b/angular/src/app/partials/home.tpl.html
@@ -1,5 +1,5 @@
 <div class="container">
-    <div class="block-content fullwidth background-secondary background-map clearfix">
+    <div class="block-content fullwidth background-secondary background-brick clearfix">
         <div class="col-md-5 col-md-offset-1 col-xs-12">
             <div class="block-content-inner row">
                 <div class="homepage-feature col-xs-12">
