--- a/angular/src/app/user/partials/loginform.tpl.html
+++ b/angular/src/app/user/partials/loginform.tpl.html
@@ -1,6 +1,7 @@
 <div ng-show="err" class="alert alert-danger">{{err}}</div>
-<div class="box">
-    <form method="post" ng-submit="login()">
+<form method="post" ng-submit="login()">
+    <div class="box">
+
         <div class="form-group">
             <label>Email Address</label>
             <input type="text" class="form-control" placeholder="Email address" ng-model="data.email" required autofocus>
@@ -10,14 +11,12 @@
             <label>Password</label>
             <input type="password" class="form-control" placeholder="Password" ng-model="data.pass" required>
         </div>
-        <!-- /.form-group -->
-        <div class="form-group">
+
+    </div>
+    <div class="row">
+        <div class="col-sm-12">
             <input type="submit" value="Login" ng-hide="createMode" class="btn btn-primary btn-inversed btn-block">
-            <button ng-cloak ng-show="createMode" ng-click="createMode = false"
-                    class="btn btn-lg btn-primary btn-block">Cancel
-            </button>
+            <p>By registering in to the system you agree to the <a href="#/terms">Terms of Use</a> and <a href="#/privacy-policy">Privacy Policy</a>.</p>
         </div>
-        <!-- /.form-group -->
-    </form>
-    <p class="center">By logging in to the system you agree to the <a href="#/terms">Terms of Use</a> and <a href="#/privacy-policy">Privacy Policy</a>.</p>
-</div>
+    </div>
+</form>
