new field for lease term text

--- a/angular/src/app/property/details.tpl.html
+++ b/angular/src/app/property/details.tpl.html
@@ -11,7 +11,7 @@
                         <div class="property-detail-overview-inner clearfix">
                             <div class="property-detail-overview-item col-sm-6 col-md-2">
                                 <strong>Lease Term:</strong>
-                                <span>{{property.leaseTerm}}</span>
+                                <span>{{property.leaseTermText}}</span>
                             </div>
                             <!-- /.property-detail-overview-item -->
                             <div class="property-detail-overview-item col-sm-6 col-md-2">
