--- a/angular/src/app/nav/partials/nav.tpl.html
+++ b/angular/src/app/nav/partials/nav.tpl.html
@@ -7,6 +7,12 @@
 <div class="pull-right collapse navbar-collapse" id="top-navbar-collapse">
     <ul class="nav navbar-nav nav-pills">
         <li class="menuparent">
+            <a ng-class="isActive('/tenants')" href="#/tenants">Tenants</a>
+        </li>
+        <li>
+            <a ng-class="isActive('/owners')" href="#/owners">Owners</a>
+        </li>
+        <li>
             <a ng-class="isActive('/properties')" href="#/properties">Properties</a>
         </li>
         <li ng-show-auth="['logout','error']"><a ng-class="isActive('/login')" href="#/login">Login</a>
