--- a/angular/src/app/partials/home.tpl.html
+++ b/angular/src/app/partials/home.tpl.html
@@ -1,135 +1,9 @@
 <div class="container">
-    <div class="block-content fullwidth background-secondary background-brick clearfix">
-        <div class="col-md-5 col-md-offset-1 col-xs-12">
-            <div class="block-content-inner row">
-                <div class="homepage-feature col-xs-12">
-                    <div class="feature-icon col-xs-2 col-sm-2">
-                        <div class="feature-icon-inner">
-                            <i class="fa fa-eye"></i>
-                        </div>
-                        <!-- /.feature-icon-inner -->
-                    </div>
-                    <!-- /.feature-icon -->
-                    <div class="col-xs-10 col-sm-10">
-                        <h2 class="homepage-feature-title">View the Property</h2>
-
-                        <div class="homepage-feature-body">
-                            Visit properties during open house or schedule a private tour.
-                        </div>
-                    </div>
-                    <!-- /.feature-content -->
-                </div>
-            </div>
-            <div class="block-content-inner row">
-                <div class="homepage-feature col-xs-12">
-                    <div class="feature-icon col-xs-2 col-sm-2">
-                        <div class="feature-icon-inner">
-                            <i class="fa fa-money"></i>
-                        </div>
-                        <!-- /.feature-icon-inner -->
-                    </div>
-                    <!-- /.feature-icon -->
-
-                    <div class="col-xs-10 col-sm-10">
-                        <h2 class="homepage-feature-title">Name your Rent&trade;</h2>
-
-                        <div class="homepage-feature-body">
-                            Submit your best rent offer on our site.
-                        </div>
-                    </div>
-                    <!-- /.feature-content -->
-                </div>
-            </div>
-            <div class="block-content-inner row">
-                <div class="homepage-feature col-xs-12">
-                    <div class="feature-icon col-xs-2 col-sm-2">
-                        <div class="feature-icon-inner">
-                            <i class="fa fa-file-text"></i>
-                        </div>
-                        <!-- /.feature-icon-inner -->
-                    </div>
-                    <!-- /.feature-icon -->
-
-                    <div class="col-xs-10 col-sm-10">
-                        <h2 class="homepage-feature-title">Sign the Papers</h2>
-
-                        <div class="homepage-feature-body">
-                            Sign your lease with ease.
-                        </div>
-                    </div>
-                    <!-- /.feature-content -->
-                </div>
-            </div>
-        </div>
-        <div class="col-md-4 col-xs-12">
-            <ng-include src="'property/partials/snippet.tpl.html'"></ng-include>
-        </div>
-    </div>
-    <hr style="visibility: hidden"/>
-    <div class="homepage-block-content fullwidth clearfix">
-        <div class="block-content-inner row">
-            <div class="col-xs-12 col-md-7">
-                <h2>View the Property</h2>
-                <ul class="homepage-feature-list list-unstyled">
-                    <li>
-                        <i class="fa fa-eye"></i> See the property that could be yours future
-                        home.
-                    </li>
-                    <li>
-                        <i class="fa fa-home"></i> Attend the open house.
-                    </li>
-                    <li>
-                        <i class="fa fa-calendar"></i> Schedule an appointment with the landlord or
-                        leasing agent.
-                    </li>
-                </ul>
-            </div>
-            <img class="col-xs-12 col-md-5" src="assets/img/FeatureImages/for-rent.jpg"/>
-        </div>
-    </div>
-    <hr/>
-    <div class="homepage-block-content fullwidth clearfix">
-        <div class="block-content-inner row">
-            <img class="col-xs-12 col-md-3" src="assets/img/FeatureImages/nameyourrent.png"/>
-            <div class="col-xs-12 col-md-7 col-md-offset-2">
-                <h2>Name Your Rent&trade;</h2>
-                <ul class="homepage-feature-list list-unstyled">
-                    <li>
-                        <i class="fa fa-money"></i> Offer the rent you are willing to pay.
-                    </li>
-                    <li>
-                        <i class="fa fa-truck"></i> Tell us when you can move-in.
-                    </li>
-                    <li>
-                        <i class="fa fa-calendar"></i> Pick how long you want to stay
-                        (month-to-month OR lease length).
-                    </li>
-                    <li>
-                        <i class="fa fa-paw"></i> Pets are welcome at selected properties.
-                    </li>
-                </ul>
-            </div>
-        </div>
-    </div>
-    <hr/>
-    <div class="homepage-block-content fullwidth clearfix">
-        <div class="block-content-inner row">
-            <div class="col-xs-12 col-md-7">
-                <h2>Sign the Papers</h2>
-                <ul class="homepage-feature-list list-unstyled">
-                    <li>
-                        <i class="fa fa-ban"></i> No application or credit check fee!
-                    </li>
-                    <li>
-                        <i class="fa fa-pencil-square-o "></i> Complete your application in-person or online
-                        after your offer is accepted.
-                    </li>
-                    <li>
-                        <i class="fa fa-suitcase"></i> Prepare to move.
-                    </li>
-                </ul>
-            </div>
-            <img class="col-xs-12 col-md-5" src="assets/img/FeatureImages/lease.jpg"/>
-        </div>
+    <div class="jumbotron">
+       <h1>Easy and transparent rental properties for every one.</h1>
+       <p style="margin-top: 30px;">
+          <a href="#/register" class="btn btn-primary btn-lg" role="button">Add a Property</a>
+          <a href="#/register" class="btn btn-primary btn-lg" role="button">Create Tenant Profile</a>
+       </p>
     </div>
 </div>
