property details require login

--- a/angular/src/app/property/list.tpl.html
+++ b/angular/src/app/property/list.tpl.html
@@ -3,7 +3,14 @@
 <div class="block-content-inner">
 <div class="row">
 <div class="col-sm-12">
-    <h2>Available Properties</h2>
+    <h2>Recent Properties</h2>
+
+    <p>Take a tour</p> 
+
+    <ul class="list-unstyled">
+       <li>- View our recent available properties</li>
+       <li>- <a href="#/login">Login</a> or <a href="#/register">register</a> to start adding properties you want to track</li>
+    </ul>
 
     <div class="row" ng-repeat="(id, property) in properties" style="border-bottom: 1px dotted #999; padding-top:30px;">
             <div class="col-sm-6 col-md-6 col-lg-4">
