new fonts and sticky topbar

--- a/angular/src/app/partials/home.tpl.html
+++ b/angular/src/app/partials/home.tpl.html
@@ -1,6 +1,6 @@
 <div class="container">
     <div class="jumbotron">
-       <h1>Easy and transparent rental properties for every one.</h1>
+       <h1>Easy &amp; Transparent Rental Properties For Everyone</h1>
        <p style="margin-top: 30px;">
           <a href="#/register" class="btn btn-primary btn-lg" role="button">Add a Property</a>
           <a href="#/register" class="btn btn-primary btn-lg" role="button">Create Tenant Profile</a>
