--- a/angular/src/assets/css/realocation.css
+++ b/angular/src/assets/css/realocation.css
@@ -4669,7 +4669,7 @@ body {
     -webkit-font-smoothing: antialiased;
     background-color: #1f1f1f;
     color: #252525;
-    font-family: "Raleway", "Arial", sans-serif;
+    font-family: "RobotoSlab", "Arial", sans-serif;
     font-size: 12px;
     height: 100%;
     line-height: 22px;
