--- a/angular/src/less/main.less
+++ b/angular/src/less/main.less
@@ -1,9 +1,21 @@
 @import "../assets/css/bootstrap.css";
 @import "../assets/css/font-awesome.css";
 @import "../assets/libraries/flexslider/flexslider.css";
+@import "../assets/css/fonts.css";
 @import "../assets/css/realocation.css";
 
 @import "../app/user/less/login.less";
+
+#header-wrapper {
+   position: fixed;
+   left: 0px;
+   right: 0px;
+   z-index: 1030;
+}
+
+#main {
+  padding-top: 50px;
+}
 
 .homepage-feature-title{
   font-weight: bold;
