--- a/angular/src/app/nav/partials/header.tpl.html
+++ b/angular/src/app/nav/partials/header.tpl.html
@@ -1,22 +1,20 @@
-<div id="header" class="header-clssic" style="border-bottom: 1px solid #ccc">
-    <div id="header-inner">
-        <!-- /.header-bar -->
-        <div>
-            <div class="container">
-                <div class="header-identity" style="padding-top: 15px;">
-                    <a href="index.html" class="header-identity-target">
-                        <span class="header-icon"><i class="fa fa-home"></i>
-                        </span>
-                        <span class="header-title">RENTED</span>
-                        <!-- /.header-title -->
-                        <span class="header-slogan">Name your Rent&trade;</span>
-                        <!-- /.header-slogan -->
-                    </a>
-                    <!-- /.header-identity-target-->
-                </div>
-                <ng-include src="'nav/partials/nav.tpl.html'"></ng-include>
-            </div>
+<div class="navbar navbar-inverse navbar-fixed-top" role="navigation" style="background-color: #89d4cd; border-width: 0 0 0 0;">
+    <div class="header-black-hide">
+    </div>
+    <div class="container">
+        <div class="navbar-header" style="padding-top: 15px; padding-bottom: 15px; background-color: #89d4cd; line-height: 32px;">
+            <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target=".navbar-collapse" style="background-color: #89d4cd; margin-right: 15px; border: 0px;">
+                <span class="sr-only">Toggle navigation</span>
+                <span class="icon-bar"></span>
+                <span class="icon-bar"></span>
+                <span class="icon-bar"></span>
+            </button>
+            <a href="/" class="header-identity-target nav-brand" style="min-width: 170px; display: inline-block;">
+                <span class="header-title">rented</span>
+            </a>
+            <!-- /.header-identity-target-->
         </div>
+        <ng-include src="'nav/partials/nav.tpl.html'"></ng-include>
     </div>
 </div>
 <ng-include src="'nav/partials/banner.tpl.html'"></ng-include>
