--- a/angular/src/app/nav/partials/nav.tpl.html
+++ b/angular/src/app/nav/partials/nav.tpl.html
@@ -1,27 +1,21 @@
-<button class="navbar-toggle" type="button" data-toggle="collapse" data-target=".header-navigation">
-    <span class="sr-only">Toggle navigation</span>
-    <span class="icon-bar"></span>
-    <span class="icon-bar"></span>
-    <span class="icon-bar"></span>
-</button>
-<div class="pull-right collapse navbar-collapse" id="top-navbar-collapse">
-    <ul class="nav navbar-nav nav-pills">
+<div class="collapse navbar-collapse" style="background-color: #000000;">
+    <ul class="nav navbar-nav primary">
         <li class="menuparent">
             <a ng-class="isActive('/tenants')" href="#/tenants">Tenants</a>
         </li>
         <li>
-            <a ng-class="isActive('/owners')" href="#/owners">Owners</a>
+            <a ng-class="isActive('/owners')" href="#/owners">Owners & Managers</a>
         </li>
         <li>
             <a ng-class="isActive('/properties')" href="#/properties">Properties</a>
         </li>
+    </ul>
+    <ul class="nav navbar-nav navbar-right secondary">
         <li ng-show-auth="['logout','error']"><a ng-class="isActive('/login')" href="#/login">Login</a>
         </li>
         <li ng-show-auth="['logout','error']"><a ng-class="isActive('/register')" href="#/register">Register</a>
         </li>
         <li class="menuparent" ng-show-auth="'login'"><a ng-class="isActive('/account')" href="#/account">My Account</a>
-        </li>
-        <li><a href="mailto:help@rented.co">Help</a>
         </li>
         <li ng-show-auth="'login'"><a href="#/logout" onclick="return confirm('Are you sure you want to logout?')">Logout</a>
         </li>
